[project]
name = "pepper-netlist"
version = "0.1.0"
description = "UTF-based netlist visualizer: prints circuit-style grids from SPICE-like files to the terminal or text output. "
authors = [{name="AlexanderGoebel", email="lollybyte.git@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

